tests/syntax_errors/missing_semicolon.c
// Self written test to test syntax error reporting

int test() {
    int x
    x = 5;
    return x;
}